# mc-version-converter

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  run.bat
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/examples/: dump_nbt.rs  scan_blocks.rs  scan_component.rs
crates/core/src/: error.rs  lib.rs  logging.rs  report.rs  version.rs
crates/core/src/chunk/: mod.rs
crates/core/src/downgrade/: mod.rs
crates/core/src/mapping/: mod.rs
crates/core/src/nbt/: data_files.rs  level_dat.rs  mod.rs
crates/core/src/pipeline/: batch.rs  mod.rs
crates/core/src/world/: layout.rs  mod.rs
crates/core/tests/: convert_e2e.rs
