[package]
name = "mcconvert"
description = "CLI for downgrading Minecraft 26.x worlds to older versions"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcconvert"
path = "src/main.rs"

[dependencies]
mcconvert-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
