[package]
name = "mcconvert-core"
description = "Engine for converting Minecraft: Java Edition 26.x worlds to older-version formats"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fastnbt = "2"
fastanvil = "0.32"
flate2 = "1"
rayon = "1"
thiserror = "2"
serde_json = "1"
